# yahoo-digest

./: .env.example  README.md  pyproject.toml  run.py
.github/workflows/: lint.yml
src/yahoo_digest/: classifier.py  digest.py  email_client.py  sender.py  state.py
